--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   },
   "dependencies": {
     "@line/bot-sdk": "^10.0.0",
+    "chrome-aws-lambda": "^10.1.0",
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
-    "puppeteer": "^24.10.2"
+    "puppeteer-core": "^10.4.0"
   }
 }
